--- a/src/index.css
+++ b/src/index.css
@@ -137,14 +137,14 @@ header .container {
 
 .shop-btn,
 .main-btn {
-  @apply relative text-sm text-black bg-transparent p-6 py-2 uppercase border border-white transition-all duration-500 ease-out hover:after:right-full hover:before:left-full 
+  @apply relative text-sm text-black bg-transparent p-6 py-2 border border-white transition-all duration-500 ease-out hover:after:right-full hover:before:left-full 
   hover:text-white hover:bg-transparent after:content-[""] after:absolute after:left-0 after:right-[49%] after:inset-y-0 after:bg-white after:-z-10 after:transition-all 
   after:duration-500 after:ease-out before:content-[""] before:absolute before:left-1/2 before:right-0 before:inset-y-0 before:bg-white before:-z-10 before:transition-all 
   before:duration-500 before:ease-out;
 }
 
 .main-btn {
-  @apply border-primary after:bg-primary before:bg-primary text-white hover:text-primary text-base p-8 py-3 font-poppins;
+  @apply border-primary after:bg-primary before:bg-primary text-white hover:text-primary text-base p-8 py-3 font-poppins z-50;
 }
 
 .banner-content {
@@ -162,10 +162,6 @@ h1 {
 
 .banner-content h1 {
   @apply font-bold text-secondary_dark text-6xl mb-7 mt-4;
-}
-
-.banner-content button {
-  @apply main-btn;
 }
 
 .banner-img,
@@ -369,6 +365,89 @@ h1 {
   }
 }
 
+.summer-collection {
+  @apply grid grid-cols-2;
+}
+
+@media screen and (max-width: 1200px) {
+  .summer_collection-content span:first-child {
+    @apply text-base;
+  }
+
+  .summer_collection-content h1 {
+    @apply text-3xl;
+  }
+
+  .summer_collection-content span:nth-child(3) {
+    @apply text-lg;
+  }
+
+  .summer-collection img {
+    @apply w-[370px] h-[405px];
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .summer-collection img {
+    @apply w-[270px] h-[295px];
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .summer-collection img {
+    @apply w-[420px] h-[460px] mt-0 order-2;
+  }
+
+  .summer-collection {
+    @apply grid-cols-1 gap-6 place-items-center;
+  }
+
+  .summer_collection-content {
+    @apply text-center order-1 mt-[40px];
+  }
+
+  .summer_collection-content h1 {
+    @apply text-[28px];
+  }
+
+  .summer_collection-content button {
+    @apply mx-auto;
+  }
+}
+
+@media screen and (max-width: 575px) {
+  .summer-collection div button {
+    @apply text-[14px];
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .summer_collection-content span:first-child {
+    @apply text-[14px];
+  }
+
+  .summer_collection-content h1 {
+    @apply text-[22px];
+  }
+
+  .summer_collection-content span:nth-child(3) {
+    @apply text-[16px];
+  }
+
+  .summer_collection-content button {
+    @apply leading-[11.7px];
+  }
+
+  .summer-collection img {
+    @apply w-full h-auto;
+  }
+}
+
+@media screen and (max-width: 300px) {
+  .summer_collection-content h1 {
+    @apply text-[20px];
+  }
+}
 /* Media Queries */
 @media screen and (max-width: 767px) {
   header .container {
