--- a/src/index.css
+++ b/src/index.css
@@ -101,6 +101,14 @@ header .container {
   @apply flex items-center gap-4;
 }
 
+.search-container-hidden {
+  @apply fixed -left-full top-0 w-full h-full z-[999] bg-[#000] bg-opacity-70 cursor-auto flex items-center justify-center transition-all duration-500;
+}
+
+.search-container-displayed {
+  @apply fixed -left-0 top-0 w-full h-full z-[999] bg-[#000] bg-opacity-70 cursor-auto flex items-center justify-center transition-all duration-500;
+}
+
 .main_nav-link {
   @apply flex items-center gap-2 text-sm cursor-pointer uppercase transition-colors duration-[275ms] h-16;
 }
@@ -313,6 +321,21 @@ h1 {
 }
 
 /*! Products */
+/* Product Fade in Animation */
+.product {
+  animation: fadeIn 1s;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+
 .products li {
   @apply text-base text-secondary_dark hover:text-primary hover:underline transition duration-300 cursor-pointer;
 }
@@ -806,17 +829,4 @@ h1 {
 
 .load-out {
   @apply min-h-screen bg-white flex items-center justify-center transition-all duration-1000 fixed inset-0 opacity-0 -z-10;
-}
-
-.product {
-  animation: fadeIn 1s;
-}
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
 }
